--- a/servicios.html
+++ b/servicios.html
@@ -130,6 +130,29 @@
         <p class="pp_sesscon3">Estaremos contentos de atender tus ideas, te invitamos a contactar con nosotros.</p>
         <a href="" class="botn"><img src="./images/accesorios/Contactar-ahora-amarillo.svg" alt=""></a>
        </div>
+
+       <!-- -->
+       <div class="text_blog">
+        <strong class="text_blog_damm">CONOCE NUESTRO BLOG</strong>
+        <img src="./images/accesorios/line.svg" alt="" class="line_blog_uwu">
+       </div>
+
+
+       <div class="carrusel_blog">
+
+       </div>
+
+       <footer>
+        <div class="footer_all"></div>
+        <div class="container__footer_text">
+          <p class="footer_text">
+            Maza Brand Estudio de diseño y branding © 2022
+          </p>
+          <img src="./images/accesorios/Siguenos.svg" alt="" class="siguenos">
+          <a href=""> <img src="./images/inicio/icons8-instagram.svg" alt="" class="icon-ig"> </a>
+          <a href=""> <img src="./images/inicio/icons8-linkedin.svg" alt="" class="icon-lk"> </a>
+        </div>
+       </footer>
       </body>
         </html>
 </html>
