--- a/nosotros.html
+++ b/nosotros.html
@@ -105,15 +105,11 @@
             </div>
 
             <!-- container segundario-->
-            
-              <div class="img_empresa_aa">
-                <img src="./images/nosotros/Landscape-Color.jpg" alt="">
-            </div>
-            <div class="text_empresa">
+            <div class="empresa_wu">
+              <img src="./images/nosotros/Landscape-Color.jpg" alt="" class="img_empresas">
+              <img src="./images/accesorios/marco-degradado.svg" alt="" class="img_empresa2">
+              <a href="" class="botn"><img src="./images/accesorios/Contactar-ahora-amarillo.svg" alt=""></a>
               <p class="pp_text_empre">Tu empresa, idea de negocio, proyecto o iniciativa necesita unos servicios óptimos.</p>
-            </div>
-            <div class="line__empresa">
-              <img src="./images/accesorios/marco-degradado.svg" alt="">
             </div>
 
             <!-- container Blog-->
@@ -125,8 +121,9 @@
             </div>
             <!-- Footer -->
           </main>
+
           <footer>
-            <div class="footer_all"></div>
+            <div class="footer_all"></div>       
             <div class="container__footer_text">
               <p class="footer_text">
                 Maza Brand Estudio de diseño y branding © 2022
@@ -134,8 +131,8 @@
               <img src="./images/accesorios/Siguenos.svg" alt="" class="siguenos">
               <a href=""><img src="./images/inicio/icons8-instagram.svg" class="icon-ig" /></a>
               <a href=""><img src="./images/inicio/icons8-linkedin.svg" class="icon-lk" /></a>
-
             </div>
+  
           </footer>
         </body>
 </html>
